make layout better in register-page and result-page

--- a/src/components/RegisterComps/Form/Form.module.scss
+++ b/src/components/RegisterComps/Form/Form.module.scss
@@ -276,6 +276,7 @@
                     cursor: pointer;
                     border: none;
                     outline: none;
+                    align-self: flex-end;
 
                     &:hover {
                         background-color: $cloudyColor;
