add form validation to multi-step-form

--- a/src/components/Register2Comps/MultiStepsForm.module.scss
+++ b/src/components/Register2Comps/MultiStepsForm.module.scss
@@ -13,6 +13,7 @@
         div {
             width: 100%;
             @include flex(column, space-between, unset);
+            margin-bottom: 30px;
             
 
             label {
@@ -22,57 +23,14 @@
             input {
                 width: 100%;
                 height: 46px;
-                margin-bottom: 30px;
-                border: 1px solid #D8D8D8;
-                border-radius: 10px;
-            }
-        }
-        input[type=submit] {
-            width: 170px;
-            height: 52px;
-            background-color: $primaryColor;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 16px;
-            font-weight: bold;
-
-            &:hover {
-                background-color: $cloudyColor;
-                color: $primaryColor;
-            }
-        }
-    }
-}
-
-@media screen and (min-width : 1024px) {
-    .container {
-        width: 75%;
-        margin : 50px auto;
-        
-
-        p {
-            margin-bottom: 70px;
-            font-size: 16px;
-        }
-        div {
-            width: 100%;
-            @include flex(column, space-between, unset);
-            label {
-                font-size: 12px;
-                margin-bottom: 10px;
-            }
-            input {
-                width: 40%;
-                height: 46px;
-                margin-bottom: 30px;
                 border: 1px solid #D8D8D8;
                 border-radius: 10px;
             }
             .check {
                 display: flex;
                 flex-direction: row;
-                width: 25%;
+                width: 100%;
+                max-width: 300px;
                 justify-content: space-between;
                 margin-bottom: 20px;
                 .daily {
@@ -93,6 +51,7 @@
                     span {
                         font-size: 12px;
                         margin-right: 10px;
+                        color: black;
                     }
                 }
                 .allday {
@@ -113,6 +72,109 @@
                     span {
                         font-size: 12px;
                         margin-right: 10px;
+                        color: black;
+                    }
+                }
+            }
+        }
+        
+        input[type=submit] {
+            width: 170px;
+            height: 52px;
+            background-color: $primaryColor;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+
+            &:hover {
+                background-color: $cloudyColor;
+                color: $primaryColor;
+            }
+        }
+    }
+}
+
+@media screen and (min-width : 1024px) {
+    .container {
+        width: 75%;
+        margin : 50px auto;
+        p {
+            margin-bottom: 70px;
+            font-size: 16px;
+        }
+        div {
+            width: 100%;
+            @include flex(column, space-between, unset);
+            margin-bottom: 30px;
+            label {
+                font-size: 12px;
+                margin-bottom: 10px;
+            }
+            input {
+                width: 40%;
+                height: 46px;
+                border: 1px solid #D8D8D8;
+                border-radius: 10px; 
+            }
+            .danger {
+                border: 1px solid red;
+            }
+            .success {
+                border: 1px solid $epiblueColor;
+            }
+            span {
+                color: red;
+                font-size: 12px;
+            }
+            .check {
+                display: flex;
+                flex-direction: row;
+                width: 30%;
+                max-width: 250px;
+                justify-content: space-between;
+                .daily {
+                    width: 100px;
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    border: 1px solid #D8D8D8;
+                    border-radius: 10px;
+                    justify-content: center;
+                    align-items: center;
+                    .radio {
+                        width: 16px;
+                        height: 16px;
+                        margin-top: 0;
+                        margin-bottom: 0;
+                    }
+                    span {
+                        font-size: 12px;
+                        margin-right: 10px;
+                        color: black;
+                    }
+                }
+                .allday {
+                    width: 120px;
+                    height: 40px;
+                    display: flex;
+                    flex-direction: row;
+                    border: 1px solid #D8D8D8;
+                    border-radius: 10px;
+                    justify-content: center;
+                    align-items: center;
+                    .radio {
+                        width: 16px;
+                        height: 16px;
+                        margin-top: 0;
+                        margin-bottom: 0;
+                    }
+                    span {
+                        font-size: 12px;
+                        margin-right: 10px;
+                        color: black;
                     }
                 }
             }
