use sass features to make codes better

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -11,6 +11,7 @@ $dangerColor : #FE5656;
 
 $borderPrimary : 1px solid $primaryColor;
 $borderDanger : 1px solid $dangerColor;
+$borderDefault : 1px solid #D8D8D8;
 
 //boxshodow
 
