--- a/src/components/Register2Comps/MultiStepsForm.module.scss
+++ b/src/components/Register2Comps/MultiStepsForm.module.scss
@@ -7,19 +7,17 @@
 
         p {
             margin-bottom: 70px;
-            font-size: 12px;
+            font-size: $pXs;
         }
         form {
             width: 100%;
             height: 470px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+            @include flex(column, space-between, unset);
             div {
                 width: 100%;
                 @include flex(column, space-between, unset);
                 label {
-                    font-size: 12px;
+                    font-size: $pXs;
                     margin-bottom: 10px;
                 }
                 span {
@@ -27,33 +25,28 @@
                     color: red;
                 }
                 .danger {
-                    border: 1px solid red;
+                    border: $borderDanger;
                 }
                 .success {
-                    border: 1px solid $epiblueColor;
+                    border: $borderPrimary;
                 }
                 input {
                     width: 100%;
                     height: 46px;
-                    border: 1px solid #D8D8D8;
+                    border: $borderDefault;
                     border-radius: 10px;
                 }
                 .check {
-                    display: flex;
-                    flex-direction: row;
+                    @include flex(row, space-between, unset);
                     width: 100%;
                     max-width: 300px;
-                    justify-content: space-between;
                     margin-bottom: 20px;
                     .daily {
+                        @include flex(row, center, center);
                         width: 100px;
                         height: 40px;
-                        display: flex;
-                        flex-direction: row;
-                        border: 1px solid #D8D8D8;
+                        border: $borderDefault;
                         border-radius: 10px;
-                        justify-content: center;
-                        align-items: center;
                         .radio {
                             width: 16px;
                             height: 16px;
@@ -61,20 +54,17 @@
                             margin-bottom: 0;
                         }
                         span {
-                            font-size: 12px;
+                            font-size: $pXs;
                             margin-right: 10px;
                             color: black;
                         }
                     }
                     .allday {
+                        @include flex(row, center, center);
                         width: 120px;
                         height: 40px;
-                        display: flex;
-                        flex-direction: row;
-                        border: 1px solid #D8D8D8;
+                        border: $borderDefault;
                         border-radius: 10px;
-                        justify-content: center;
-                        align-items: center;
                         .radio {
                             width: 16px;
                             height: 16px;
@@ -82,7 +72,7 @@
                             margin-bottom: 0;
                         }
                         span {
-                            font-size: 12px;
+                            font-size: $pXs;
                             margin-right: 10px;
                             color: black;
                         }
@@ -120,9 +110,7 @@
         form {
             width: 40%;
             height: 470px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+            @include flex(column, space-between, unset);
             div {
                 width: 100%;
                 @include flex(column, space-between, unset);
@@ -141,27 +129,22 @@
                     border-radius: 10px;
                 }
                 .danger {
-                    border: 1px solid red;
+                    border: $borderDanger;
                 }
                 .success {
-                    border: 1px solid $epiblueColor;
+                    border: $borderPrimary;
                 }
                 .check {
-                    display: flex;
-                    flex-direction: row;
+                    @include flex(row, space-between, unset);
                     width: 100%;
                     max-width: 300px;
-                    justify-content: space-between;
                     margin-bottom: 20px;
                     .daily {
+                        @include flex(row, center, center);
                         width: 100px;
                         height: 40px;
-                        display: flex;
-                        flex-direction: row;
-                        border: 1px solid #D8D8D8;
+                        border: $borderDefault;
                         border-radius: 10px;
-                        justify-content: center;
-                        align-items: center;
                         .radio {
                             width: 16px;
                             height: 16px;
@@ -175,14 +158,11 @@
                         }
                     }
                     .allday {
-                        width: 120px;
+                        @include flex(row, center, center);
+                        width: 100px;
                         height: 40px;
-                        display: flex;
-                        flex-direction: row;
                         border: 1px solid #D8D8D8;
                         border-radius: 10px;
-                        justify-content: center;
-                        align-items: center;
                         .radio {
                             width: 16px;
                             height: 16px;
