--- a/src/components/Register2Comps/Steps/Result.module.scss
+++ b/src/components/Register2Comps/Steps/Result.module.scss
@@ -2,13 +2,13 @@
 
 @media screen and (min-width : 320px) {
     .container {
-    width: 80%;
-    margin: 70px auto;
-    @include flex(column-reverse, space-between, center);
+        width: 80%;
+        margin: 70px auto;
+        @include flex(column-reverse, space-between, center);
 
-    .rigth {
-        width: 100%;
-        .resultContent {
+        .rigth {
+            width: 100%;
+            .resultContent {
             width: 100%;
             margin: 0 auto;
             display: flex;
@@ -17,11 +17,10 @@
                 width: 50%;
                 margin-bottom: 20px;
                 p:first-child {
-                    font-size: 12px;
-                    font-weight: lighter;
+                    @include pText($pXs, lighter, unset);
                 }
                 p:last-child {
-                    font-size: 16px;
+                    @include pText(16px, unset, unset);
                 }
             }
         }
@@ -82,11 +81,10 @@
         div {
             width: 50%;
             p:first-child {
-                font-size: 12px;
-                font-weight: lighter;
+                @include pText($pXs, lighter, unset);
             }
             p:last-child {
-                font-size: 14px;
+                @include pText(14px, unset, unset);
             }
         }
     }
@@ -132,9 +130,9 @@
 
 @media screen and (min-width : 500px) {
     .container {
-    width: 80%;
-    margin: 70px auto;
-    @include flex(column-reverse, space-between, center);
+        width: 80%;
+            margin: 70px auto;
+            @include flex(column-reverse, space-between, center);
 
     .rigth {
         width: 100%;
@@ -147,11 +145,10 @@
                 width: 50%;
                 margin-bottom: 20px;
                 p:first-child {
-                    font-size: 12px;
-                    font-weight: lighter;
+                    @include pText($pXs, lighter, unset);
                 }
                 p:last-child {
-                    font-size: 16px;
+                    @include pText(16px, unset, unset);
                 }
             }
         }
@@ -213,11 +210,10 @@
         div {
             width: 50%;
             p:first-child {
-                font-size: 12px;
-                font-weight: lighter;
+                @include pText($pXs, lighter, unset);
             }
             p:last-child {
-                font-size: 14px;
+                @include pText(14px, unset, unset);
             }
         }
     }
@@ -280,11 +276,10 @@
                     width: 33%;
                     margin-bottom: 20px;
                     p:first-child {
-                        font-size: 12px;
-                        font-weight: lighter;
+                        @include pText($pXs, lighter, unset);
                     }
                     p:last-child {
-                        font-size: 16px;
+                        @include pText(16px, lighter, unset);
                     }
                 }
             }
