--- a/src/components/MainPageComps/Sec3/Sec3.module.scss
+++ b/src/components/MainPageComps/Sec3/Sec3.module.scss
@@ -8,11 +8,12 @@
         .content {
             width: 100%;
             @include flex(column, space-between, unset);
-
             .boxes {
-                width: 175%;
+                
                 @include flex(row, space-between, unset);
                 margin-top: 41.5px;
+                flex-wrap: nowrap;
+                overflow-x: auto;
                 .deactive {
                     filter: grayscale(100%);
                     opacity: .5;
@@ -21,7 +22,8 @@
                 .box {
                     @include boxing(100px, 100px);
                     @include flex(column,center, center);
-
+                    flex: 0 0 auto;
+                    margin-right: 10px;
                     &:hover {
                         opacity: 1;
                         filter: grayscale(0);
@@ -91,6 +93,7 @@
             .boxes {
                 width: 110%;
                 justify-content: space-evenly;
+                overflow-x: unset;
             }
         }
     }
@@ -112,9 +115,10 @@
                 width: 360px;
                 height: 374px;
                 margin-top: 41.5px;
+                overflow-x: unset;
                 .box {
                     @include boxing(160px, 160px);
-                    @include flex(column, center, center);
+                    @include flex(column, center, center);              
 
                     &:hover {
                         opacity: 1;
