--- a/src/components/RegisterComps/Form/Form.module.scss
+++ b/src/components/RegisterComps/Form/Form.module.scss
@@ -21,7 +21,7 @@
                     font-size: 12px;
                     margin-top: 20px;
                 }
-                input {
+                input, select {
                     width: 100%;
                     height: 46px;
                     margin-top: 10px;
@@ -166,7 +166,7 @@
                     font-size: 12px;
                     margin-top: 20px;
                 }
-                input {
+                input, select {
                     width: 100%;
                     height: 46px;
                     margin-top: 10px;
